# vecto-dyna

./: .gitignore  CMakeLists.txt  INSTALL  install.sh  run.sh  version.txt
src/: LButton.cpp  LButton.h  MainWindow.cpp  MainWindow.h  Utilities.cpp  Utilities.h  main.cpp
